--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">man_delivery_food</string>
+    <string name="app_name">Fissa Man Delivery</string>
 </resources>
